# opencv-ffmpeg-nvjmi

./: CMakeLists.txt  README.md  main.cpp  nvjmi.h  video_capture.cpp  video_capture.h
